changed the AC button color

--- a/calculator.html
+++ b/calculator.html
@@ -21,7 +21,7 @@
     <div id="history" class="history-log"></div>
 
     <div class="button-row">
-      <button class="buttonOperator">AC</button>
+      <button class="buttonOperator ac">AC</button>
       <button class="buttonOperator">%</button>
        <button class="buttonOperator">√</button>
       <button class="buttonOperator">^</button>
